--- a/MainWindow.form
+++ b/MainWindow.form
@@ -159,7 +159,7 @@
                     <properties>
                       <editable value="false"/>
                       <lineWrap value="true"/>
-                      <text value="댓글 리스트"/>
+                      <text value="하무망갤러리의 투자를 받고 제작되었습니다. 지원문의 volen.siderov@ataka-bg.com "/>
                       <wrapStyleWord value="true"/>
                     </properties>
                   </component>
